--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -22,7 +22,7 @@ html {
     box-sizing: border-box;
 }
 
-
+/* Responsive */
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -37,6 +37,8 @@ html {
     display: flex;
     flex-wrap: wrap;
 }
+
+
 
 /* Animation */
 @keyframes fadeIn {
