--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -41,13 +41,13 @@ html {
 }
 
 /* Test */
-.gril__column-2 {
+.grid__column-2 {
     padding-left: 12px;
     padding-right: 12px;
     width: 16.6667%;
 }
 
-.gril__column-10 {
+.grid__column-10 {
     padding-left: 12px;
     padding-right: 12px;
     width: 83.3334%;
@@ -136,4 +136,59 @@ html {
     cursor: default;
     background-color: #c3c3c3;
     color: #949494;
+}
+
+/* Selection */
+
+.select-input {
+    position: relative;
+    min-width: 200px;
+    height: 34px;
+    padding: 0 12px; 
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.select-input__label {
+    font-size: 1.4rem;
+}
+
+.select-input__icon {
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+    
+    position: relative;
+    top: 1px;
+}
+
+.select-input:hover .select-input__list {
+    display: block;
+}
+
+.select-input__list {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 25px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 8px 16px;
+    list-style: none;
+    display: none;
+}
+
+.select-input__link {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    text-decoration: none;
+    display: block;
+    padding: 4px 0;
+}
+
+.select-input__link:hover {
+    color: var(--primary-color);
 }
